force-app/main/default/objects/SMS_Message__c/SMS_Message__c.object-meta.xml
<CustomObject>
    <description>Stores a log of every inbound and outbound SMS message exchanged via Twilio.</description>
    <label>SMS Message</label>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>