force-app/main/default/objects/SMS_Message__c/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <description>Twilio Account SID associated with this message.</description>
    <label>Account SID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>