force-app/main/default/objects/SMS_Message__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Error message from Twilio or Salesforce if the SMS send/receive failed.</description>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>