force-app/main/default/objects/SMS_Message__c/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <description>The phone number the message was sent FROM.</description>
    <label>From Number</label>
    <type>Phone</type>
</CustomField>