force-app/main/default/objects/SMS_Message__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The primary phone number involved in the message (To for Outbound, From for Inbound).</description>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>