force-app/main/default/objects/SMS_Message__c/fields/Twilio_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Message_Id__c</fullName>
    <description>Twilio&apos;s unique message SID (e.g. SM3b…). Use this to look up messages in Twilio Console.</description>
    <label>Twilio Message ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>