force-app/main/default/objects/SMS_Message__c/fields/Twilio_Status__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Status__c</fullName>
    <description>Raw status string returned by Twilio (queued, sent, delivered, failed, undelivered).</description>
    <label>Twilio Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>